Wed Aug  7 13:40:55 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/trace.rb : Fix bad context message emission of
	  undefinable variables.

	* features/code_check/W0460.feature : Add scenario to reproduce bad
	  context message problem.

Wed Aug  7 10:28:42 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/**/* : Support context-tracing to improve readability of
	  warning messages.
	* lib/adlint/cc1/trace.rb : Add new context tracing module.

	* features/code_check/* : Add scenarios for testing context-tracing.

Wed Jul 10 15:14:43 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/value.rb : Refactor relationships between VersionGroup
	  object and its Version object in order to exactly represent a design
	  of the value version management.

Fri Jun 28 10:23:30 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.0.10
	  - Add missing comment handling in the initial state of the
	    preprocessing lexer.
	  - Fix incomplete identifier to typedef name translation when the
	    declaring enumerator name is conflicting with the prior typedef
	    name.
	  - Fix evaluation of the global constant variable definition in order
	    not to ignore value of the initializer.
	  - Revise pointer dereferencing behavior to successfully dereference a
	    pointer only when the value of pointer variable is definite.
	  - Improve heuristics of array subscript evaluation with indefinite
	    subscript.
	  - Fix controlling-expression deduction of iteration-statements in
	    order to adopt the ordinary expression when no control breaking
	    condition is found in the iteration body.
	  - Remove unnecessary controlling expression evaluation at entering a
	    do-statement.
	  - Fix value-domain thinning condition to thin domains discarded by a
	    break-statement in the iteration.
	  - Fix bypassing inner-variable's value mutation in order to correctly
	    propagate mutation to the outer-variable.
